--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-9">
             <h2>Abhinav Chaulagai</h2>
-            <p>I'm <span class="typed" data-typed-items="Designer, Developer,Software Enthusiast"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+            <p>I'm a<span class="typed" data-typed-items="Designer, Developer,Software Enthusiast"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
               <a href="https://x.com/AbhinavChaulag3" target="_blank"><i class="bi bi-twitter-x"></i></a>
               <a href="https://www.facebook.com/abhinav.chaulagai/" target="_blank"><i class="bi bi-facebook"></i></a>
