--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
                 </svg>
                 <i class="bi bi-window-fullscreen"></i>
               </div>
-              <a href="#" class="stretched-link">
-                <h3>Inflation Real-time World Data</h3>
+              <a href="https://abhinavchaulagai.github.io/War-Data/" class="stretched-link">
+                <h3>War Death Count Tracker</h3>
               </a>
               <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p>
             </div>
