--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 </svg>
                 <i class="bi bi-window-fullscreen"></i>
               </div>
-              <a href="https://github.com" class="stretched-link">
+              <a href="https://github.com" class="stretched-link" target="_blank">
                 <h3>Online Chat Website</h3>
               </a>
               <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p>
@@ -200,7 +200,7 @@
                 </svg>
                 <i class="bi bi-window-fullscreen"></i>
               </div>
-              <a href="https://abhinavchaulagai.github.io/War-Data/" class="stretched-link">
+              <a href="https://abhinavchaulagai.github.io/War-Data/" class="stretched-link" target="_blank">
                 <h3>War Death Count Tracker</h3>
               </a>
               <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p>
@@ -215,7 +215,7 @@
                 </svg>
                 <i class="bi bi-window-fullscreen"></i>
               </div>
-              <a href="#" class="stretched-link"> 
+              <a href="#" class="stretched-link" target="_blank"> 
                 <h3>Inflation Real-time World Data</h3>
               </a>
               <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p>
@@ -230,7 +230,7 @@
                 </svg>
                 <i class="bi bi-filetype-py"></i>
               </div>
-              <a href="#" class="stretched-link">
+              <a href="#" class="stretched-link" target="_blank">
                 <h3>Inflation Real-time World Data</h3>
               </a>
               <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p>
@@ -245,7 +245,7 @@
                 </svg>
                 <i class="bi bi-filetype-py"></i>
               </div>
-              <a href="#" class="stretched-link">
+              <a href="#" class="stretched-link" target="_blank">
                 <h3>Security System</h3>
               </a>
               <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci eos earum corrupti.</p>
