--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
                 </svg>
                 <i class="bi bi-window-fullscreen"></i>
               </div>
-              <a href="#" class="stretched-link" target="_blank"> 
-                <h3>Inflation Real-time World Data</h3>
+              <a href="https://github.com/AbhinavChaulagai/Data-Mangement" class="stretched-link" target="_blank"> 
+                <h3>Data Management System</h3>
               </a>
               <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p>
             </div>
