--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 <i class="bi bi-filetype-py"></i>
               </div>
               <a href="#" class="stretched-link" target="_blank">
-                <h3>Inflation Real-time World Data</h3>
+                <h3>Calculator</h3>
               </a>
               <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p>
             </div>
