--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 </svg>
                 <i class="bi bi-filetype-py"></i>
               </div>
-              <a href="#" class="stretched-link" target="_blank">
+              <a href="https://github.com/AbhinavChaulagai/Calculator" class="stretched-link" target="_blank">
                 <h3>Calculator</h3>
               </a>
               <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p>
