--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                 </svg>
                 <i class="bi bi-filetype-py"></i>
               </div>
-              <a href="#" class="stretched-link" target="_blank">
+              <a href="https://github.com/AbhinavChaulagai/Security-System" class="stretched-link" target="_blank">
                 <h3>Security System</h3>
               </a>
               <p></p>
