--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <img src="css&js/img/abhinav.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
-            <h2>High School Graduate&amp; Computer Enthusiast.</h2>
+            <h2>High School Graduate &amp; Computer Enthusiast.</h2>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -119,7 +119,7 @@
 
             <div class="resume-item pb-0">
               <h4>Abhinav Chaulagai</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <p><em>Web designer and programmer with a passion for crafting intuitive digital experiences. Skilled in graphic design and driven by a deep interest in computer science, I bring a creative and technical approach to every project, blending aesthetics with functionality to deliver impactful solutions</em></p>
               <ul>
                 <li>+977 9847374760</li>
                 <li>abhinav.chaulagai@gmail.com</li>
