--- a/index.html
+++ b/index.html
@@ -142,8 +142,9 @@
               <h4>Python</h4>
               <h5>2019 - Present</h5>
               <ul>
+                <li>Data Management Systen</li>
+                <li>Calculator</li>
                 <li>Security System</li>
-                <li>Detector</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
@@ -151,8 +152,8 @@
               <h4>Full-Stack Web development</h4>
               <h5>2019 - Present</h5>
               <ul>
-                <li>Chat Website</li>
-                <li>Inflation Data Realtime</li>
+                <li>Online Chat Website</li>
+                <li>War Data Realtime</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
