--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               <h4>Python</h4>
               <h5>2019 - Present</h5>
               <ul>
-                <li>Data Management Systen</li>
+                <li>Data Management System</li>
                 <li>Calculator</li>
                 <li>Security System</li>
               </ul>
