--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 </svg>
                 <i class="bi bi-window-fullscreen"></i>
               </div>
-              <a href="https://github.com" class="stretched-link" target="_blank">
+              <a href="https://global-chat-jp3k.onrender.com/" class="stretched-link" target="_blank">
                 <h3>Online Chat Website</h3>
               </a>
               <p>An online chat platform for global communication, connecting people worldwide in real-time. Chat, share ideas, and build connections with ease—bringing the world closer, one message at a time!</p>
