--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <li><a href="#about"><i class="bi bi-person navicon"></i><span>About</span></a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i><span>Resume</span></a></li>
         <li><a href="#projects"><i class="bi bi-hdd-stack navicon"></i><span>Projects</span></a></li>
+        <li><a href="#research"><i class="bi bi-newspaper"></i><span>Research Papers</span></a></li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i><span>Contact</span></a></li>
       </ul>
     </nav>
@@ -47,7 +48,6 @@
             <h2>Abhinav Chaulagai</h2>
             <p>I'm a <span class="typed" data-typed-items="Designer, Developer,Software Enthusiast"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
-              <a href="https://github.com/AbhinavChaulagai" target="_blank"><i class="bi bi-github"></i></a>
               <a href="https://x.com/AbhinavChaulag3" target="_blank"><i class="bi bi-twitter-x"></i></a>
               <a href="https://www.facebook.com/abhinav.chaulagai/" target="_blank"><i class="bi bi-facebook"></i></a>
               <a href="https://www.instagram.com/abhinavchaulagai/" target="_blank"><i class="bi bi-instagram"></i></a>
@@ -92,9 +92,10 @@
                 </ul>
               </div>
             </div>
-            <p class="py-3">
-              
-            </p>
+            <!-- <p class="py-3">
+              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
+              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
+            </p> -->
           </div>
         </div>
 
@@ -119,7 +120,7 @@
 
             <div class="resume-item pb-0">
               <h4>Abhinav Chaulagai</h4>
-              <p><em>Web designer and programmer with a passion for crafting intuitive digital experiences. Skilled in graphic design and driven by a deep interest in computer science, I bring a creative and technical approach to every project, blending aesthetics with functionality to deliver impactful solutions</em></p>
+              <p><em>Innovative and deadline-driven Developer,Graphic Designer with 5+ years of experience.</em></p>
               <ul>
                 <li>+977 9847374760</li>
                 <li>abhinav.chaulagai@gmail.com</li>
@@ -131,7 +132,7 @@
               <h4>HighSchool Graduate</h4>
               <h5>2019 - 2023</h5>
               <p><em>Budhanilkantha School</em></p>
-              <p></p>
+              <!-- <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p> -->
             </div><!-- Edn Resume Item -->
 
           </div>
@@ -142,18 +143,55 @@
               <h4>Python</h4>
               <h5>2019 - Present</h5>
               <ul>
-                <li>Data Management System</li>
-                <li>Calculator</li>
                 <li>Security System</li>
+                <li>Face Recognition Attendance System</li>
+                <li>Data Management System</li>
+                <li>Hospital Management System</li>
+                <li>Movie Recommendation System</li>
+                <li>File Organizer (sort files by extension/date)</li>
+                <li>PDF Merger/Splitter</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
               <h4>Full-Stack Web development</h4>
-              <h5>2019 - Present</h5>
+              <h5>2021 - Present</h5>
               <ul>
-                <li>Online Chat Website</li>
-                <li>War Data Realtime</li>
+                <li>Meetpal</li>
+                <li>Resume Kreator</li>
+                <li>Inflation Data Realtime</li>
+                <li>Hospital Management</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>Wordpress</h4>
+              <h5>2023 - Present</h5>
+              <ul>
+                <li>E-commerce Store</li>
+                <li>Online Blog Poster</li>
+         
+              </ul>
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>AI Projects</h4>
+              <h5>2024 - Present</h5>
+              <ul>
+                <li>AI Powered Flash Card Generator</li>
+                <li>Regression</li>
+                <li>Image Classification Tensorflow</li>
+                <li>Text Classification Tensorflow</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>Apps</h4>
+              <h5>2025 - Present</h5>
+              <ul>
+                <li>Food Delivery App</li>
+                <li>Ride Sharing App</li>
+                <li>Health Tracker</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
@@ -186,10 +224,10 @@
                 </svg>
                 <i class="bi bi-window-fullscreen"></i>
               </div>
-              <a href="https://global-chat-jp3k.onrender.com/" class="stretched-link" target="_blank">
+              <a href="https://github.com" class="stretched-link">
                 <h3>Online Chat Website</h3>
               </a>
-              <p>An online chat platform for global communication, connecting people worldwide in real-time. Chat, share ideas, and build connections with ease—bringing the world closer, one message at a time!</p>
+              <!-- <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p> -->
             </div>
           </div><!-- End project Item -->
 
@@ -201,10 +239,10 @@
                 </svg>
                 <i class="bi bi-window-fullscreen"></i>
               </div>
-              <a href="https://abhinavchaulagai.github.io/War-Data/" class="stretched-link" target="_blank">
-                <h3>War Death Count Tracker</h3>
+              <a href="#" class="stretched-link">
+                <h3>Inflation Real-time World Data</h3>
               </a>
-              <p>A real-time war death counter tracking casualties from ongoing global conflicts. Stay informed with up-to-date statistics and understand the human cost of war, highlighting the urgency for peace.</p>
+              <!-- <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p> -->
             </div>
           </div><!-- End project Item -->
 
@@ -214,12 +252,12 @@
                 <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
                   <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,582.0697525312426C382.5290701553225,586.8405444964366,449.9789794690241,525.3245884688669,502.5850820975895,461.55621195738473C556.606425686781,396.0723002908107,615.8543463187945,314.28637112970534,586.6730223649479,234.56875336149918C558.9533121215079,158.8439757836574,454.9685369536778,164.00468322053177,381.49747125262974,130.76875717737553C312.15926192815925,99.40240125094834,248.97055460311594,18.661163978235184,179.8680185752513,50.54337015887873C110.5421016452524,82.52863877960104,119.82277516462835,180.83849132639028,109.12597500060166,256.43424936330496C100.08760227029461,320.3096726198365,92.17705696193138,384.0621239912766,124.79988738764834,439.7174275375508C164.83382741302287,508.01625554203684,220.96474134820875,577.5009287672846,300,582.0697525312426"></path>
                 </svg>
-                <i class="bi bi-filetype-py"></i>
+                <i class="bi bi-window-fullscreen"></i>
               </div>
-              <a href="https://github.com/AbhinavChaulagai/Data-Mangement" class="stretched-link" target="_blank"> 
-                <h3>Data Management System</h3>
+              <a href="#" class="stretched-link"> 
+                <h3>Inflation Real-time World Data</h3>
               </a>
-              <p>A streamlined data management system designed to easily add and organize data directly into Excel sheets. Efficiently input, update, and track records with simple user interaction, improving workflow and data accessibility</p>
+              <!-- <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p> -->
             </div>
           </div><!-- End project Item -->
 
@@ -231,10 +269,10 @@
                 </svg>
                 <i class="bi bi-filetype-py"></i>
               </div>
-              <a href="https://github.com/AbhinavChaulagai/Calculator" class="stretched-link" target="_blank">
-                <h3>Calculator</h3>
+              <a href="#" class="stretched-link">
+                <h3>Inflation Real-time World Data</h3>
               </a>
-              <p>A straightforward calculator for quick and simple calculations, perfect for basic math tasks like addition, subtraction, multiplication, and division.</p>
+              <!-- <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p> -->
             </div>
           </div><!-- End project Item -->
 
@@ -246,14 +284,43 @@
                 </svg>
                 <i class="bi bi-filetype-py"></i>
               </div>
-              <a href="https://github.com/AbhinavChaulagai/Security-System" class="stretched-link" target="_blank">
+              <a href="#" class="stretched-link">
                 <h3>Security System</h3>
               </a>
-              <p>A security system that captures a photo whenever an incorrect code is entered, enhancing safety by logging failed access attempts with visual evidence.</p>
+              <!-- <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci eos earum corrupti.</p> -->
             </div>
           </div><!-- End project Item -->
         </div>
       </div>
+
+    </section><!-- /projects Section -->
+
+    <!-- projects Section -->
+    <section id="research" class="projects section">
+
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Research Papers</h2>
+      </div><!-- End Section Title -->
+
+      <div class="container">
+
+        <div class="row gy-4">
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+            <div class="project-item item-cyan position-relative">
+              <div class="icon">
+                <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
+                  <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,521.0016835830174C376.1290562159157,517.8887921683347,466.0731472004068,529.7835943286574,510.70327084640275,468.03025145048787C554.3714126377745,407.6079735673963,508.03601936045806,328.9844924480964,491.2728898941984,256.3432110539036C474.5976632858925,184.082847569629,479.9380746630129,96.60480741107993,416.23090153303,58.64404602377083C348.86323505073057,18.502131276798302,261.93793281208167,40.57373210992963,193.5410806939664,78.93577620505333C130.42746243093433,114.334589627462,98.30271207620316,179.96522072025542,76.75703585869454,249.04625023123273C51.97151888228291,328.5150500222984,13.704378332031375,421.85034740162234,66.52175969318436,486.19268352777647C119.04800174914682,550.1803526380478,217.28368757567262,524.383925680826,300,521.0016835830174"></path>
+                </svg>
+                <i class="bi bi-window-fullscreen"></i>
+              </div>
+              <a href="https://github.com" class="stretched-link">
+                <h3>How AI is used in Youtube to make experience better</h3>
+              </a>
+              <!-- <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p> -->
+            </div>
+          </div><!-- End project Item -->
 
     </section><!-- /projects Section -->
 
