--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <h2>Abhinav Chaulagai</h2>
             <p>I'm a <span class="typed" data-typed-items="Designer, Developer,Software Enthusiast"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
+              <a href="https://github.com/AbhinavChaulagai" target="_blank"><i class="bi bi-github"></i></a>
               <a href="https://x.com/AbhinavChaulag3" target="_blank"><i class="bi bi-twitter-x"></i></a>
               <a href="https://www.facebook.com/abhinav.chaulagai/" target="_blank"><i class="bi bi-facebook"></i></a>
               <a href="https://www.instagram.com/abhinavchaulagai/" target="_blank"><i class="bi bi-instagram"></i></a>
