--- a/index.html
+++ b/index.html
@@ -376,6 +376,7 @@
     <div class="container">
       <h3 class="sitename">Abhinav Chaulagai</h3>
       <div class="social-links d-flex justify-content-center">
+        <a href="https://github.com/AbhinavChaulagai" target="_blank"><i class="bi bi-github"></i></a>
         <a href="https://x.com/AbhinavChaulag3" target="_blank"><i class="bi bi-twitter-x"></i></a>
         <a href="https://www.facebook.com/abhinav.chaulagai/" target="_blank"><i class="bi bi-facebook"></i></a>
         <a href="https://www.instagram.com/abhinavchaulagai/" target="_blank"><i class="bi bi-instagram"></i></a>
