--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-9">
             <h2>Abhinav Chaulagai</h2>
-            <p>I'm a <span class="typed" data-typed-items="Designer, Developer,AI & Machine Learning Enthusiast"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+            <p>I'm a <span class="typed" data-typed-items=" Developer,AI Enthusiast,Machine Learning Enthusiast, Designer"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
               <a href="https://github.com/AbhinavChaulagai" target="_blank"><i class="bi bi-github"></i></a>
               <a href="https://x.com/AbhinavChaulag3" target="_blank"><i class="bi bi-twitter-x"></i></a>
