--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Projects</h2>
+        <h2>Some of My Projects</h2>
       </div><!-- End Section Title -->
 
       <div class="container">
