--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 </svg>
                 <i class="bi bi-window-fullscreen"></i>
               </div>
-              <a href="https://github.com" class="stretched-link">
+              <a href="https://meetpal.netlify.app/#" class="stretched-link">
                 <h3>Online Chat Website</h3>
               </a>
               <!-- <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p> -->
