--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 <i class="bi bi-window-fullscreen"></i>
               </div>
               <a href="https://meetpal.netlify.app/#" class="stretched-link">
-                <h3>Online Chat Website</h3>
+                <h3>Online Random Video Call Website</h3>
               </a>
               <!-- <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p> -->
             </div>
