--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
                 </svg>
                 <i class="bi bi-window-fullscreen"></i>
               </div>
-              <a href="#" class="stretched-link">
-                <h3>Inflation Real-time World Data</h3>
+              <a href="https://abhinavchaulagai.github.io/War-Data/" class="stretched-link">
+                <h3>Death Count Real-time World Data</h3>
               </a>
               <!-- <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p> -->
             </div>
@@ -255,8 +255,8 @@
                 </svg>
                 <i class="bi bi-window-fullscreen"></i>
               </div>
-              <a href="#" class="stretched-link"> 
-                <h3>Inflation Real-time World Data</h3>
+              <a href="https://github.com/AbhinavChaulagai/health-tracker" class="stretched-link"> 
+                <h3>Health Tracker</h3>
               </a>
               <!-- <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p> -->
             </div>
@@ -270,8 +270,8 @@
                 </svg>
                 <i class="bi bi-filetype-py"></i>
               </div>
-              <a href="#" class="stretched-link">
-                <h3>Inflation Real-time World Data</h3>
+              <a href="https://github.com/AbhinavChaulagai/AI-Powered-Flashcard-App" class="stretched-link">
+                <h3>AI-Powered-Flashcard-App</h3>
               </a>
               <!-- <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p> -->
             </div>
@@ -285,8 +285,8 @@
                 </svg>
                 <i class="bi bi-filetype-py"></i>
               </div>
-              <a href="#" class="stretched-link">
-                <h3>Security System</h3>
+              <a href="https://resumekreator.netlify.app/" class="stretched-link">
+                <h3>Resume Kreator</h3>
               </a>
               <!-- <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci eos earum corrupti.</p> -->
             </div>
