--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="css&js/img/abhinav.jpg" class="img-fluid" alt="">
+            <img src="css&js/img/Chaulagai Abhinav.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>High School Graduate &amp; Computer Enthusiast.</h2>
